logging-stack/stripprefix-middleware-logging.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-logging
  namespace: logging
spec:
  stripPrefix:
    prefixes:
      - "/kibana"
      - "/elastic"
    forceSlash: false
