logging-stack/es-ing.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: es-ingress
  namespace: logging
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - kind: Rule
    match: Host(`elastic.ion-cluster.home`)   
    services:
    - name: efk-es-http
      port: 9200
      namespace: logging
