logging-stack/kibana-ing.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana-ingress
  namespace: logging
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - kind: Rule
    match: Host(`ion-cluster.home`) && PathPrefix(`/kibana`)
    services:
    - name: kibana-kb-http
      port: 5601
      namespace: logging
